--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://tonstellar.org"
-  to = "https://ton.org/"
+  from = "brstellar.fund"
+  to = "https://www.blackrock.com/"
   status = 301
   force = true
