--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "brstellar.fund"
+  from = "http://brockstellar.com"
   to = "https://www.blackrock.com/"
   status = 301
   force = true
